@@ -12,8 +12,7 @@ import javax.xml.bind.annotation.XmlRootElement;
  * @author FiruzzZ
  */
 @Entity
-@Table(name = "cheque_terceros", uniqueConstraints =
-@UniqueConstraint(columnNames = {"cliente", "banco", "numero"}, name = "unq_cliente_banco_numero"))
+@Table(name = "cheque_terceros")
 @XmlRootElement
 @NamedQueries({
     @NamedQuery(name = "ChequeTerceros.findAll", query = "SELECT c FROM ChequeTerceros c"),
